--- a/back/package.json
+++ b/back/package.json
@@ -1,32 +1,33 @@
 {
-	"name": "nc-project",
-	"version": "1.0.0",
-	"description": "",
-	"main": "app.js",
-	"scripts": {
-		"dev": "tsnd --respawn --clear src/server.ts",
-		"prod": "NODE_ENV=production tsnd --respawn --clear src/server.ts",
-		"build": "rimraf ./dist && tsc",
-		"start": "npm run build && node dist/server.js",
-		"restartData": "tsnd  src/data/import-data.ts ",
-		"deleteData": "tsnd src/data/deleteDb.ts"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@types/cors": "^2.8.17",
-		"@types/express": "^4.17.21",
-		"@types/morgan": "^1.9.9",
-		"@types/node": "^20.11.17",
-		"rimraf": "^5.0.5",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.3.3"
-	},
-	"dependencies": {
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.2",
-		"env-var": "^7.4.1",
-		"express": "^4.18.2",
-		"morgan": "^1.10.0"
-	}
+  "name": "back",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "dev": "tsnd --respawn --clear src/server.ts",
+    "prod": "NODE_ENV=production tsnd --respawn --clear src/server.ts",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/server.js",
+    "restartData": "tsnd  src/data/import-data.ts ",
+    "deleteData": "tsnd src/data/deleteDb.ts"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.17",
+    "rimraf": "^5.0.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.2",
+    "env-var": "^7.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.2",
+    "morgan": "^1.10.0"
+  }
 }
