--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.17",
     "rimraf": "^5.0.5",
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.2",
     "env-var": "^7.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0"
   }
